# aliases

./: CHANGELOG.md  archive_aliases.sh  base_aliases.sh  copy_aliases.sh  git_aliases.sh  notes_aliases.sh  pyproject.toml  tmux_aliases.sh  tmuxifier_aliases.sh  zsh_functions.sh
